--- a/back-events/back-events/.gitignore
+++ b/back-events/back-events/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!**/resources/apikey.proprieties
 
 ### STS ###
 .apt_generated
