--- a/back-events/back-events/pom.xml
+++ b/back-events/back-events/pom.xml
@@ -57,6 +57,11 @@
 			<version>2.4.2</version>
 		</dependency>
 		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>spring-mock-mvc</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.maxmind.geoip2</groupId>
 			<artifactId>geoip2</artifactId>
 			<version>2.6.0</version>
